# wisteria

./: Cargo.toml  README.md  flake.nix
wisteria/: Cargo.toml
wisteria/src/: main.rs  service_registry.rs
wisteria_services/: Cargo.toml
wisteria_services/src/: lib.rs  mpris.rs  music.rs  sys_info.rs
wisteria_services/src/compositor/: hyprland.rs  mod.rs
wisteria_ui/: Cargo.toml
wisteria_ui/src/: assets.rs  bar.rs  lib.rs  wallpaper.rs
wisteria_ui/src/widgets/: clock.rs  launcher.rs  menu.rs  mod.rs  mpris.rs  music.rs  notification.rs  peripheral.rs  system_stats.rs  volume.rs  vpn.rs  workspaces.rs
