[package]
name = "wisteria_services"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
futures-signals.workspace = true
futures-util.workspace = true
gpui.workspace = true
zbus = "5.16.0"
zvariant = "5.12.0"
sysinfo = "0.39.5"
async-io = "2.6.0"
futures-lite = "2.6.1"
serde_json = "1.0.150"
